<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/target_system"
            android:textColor="@color/textDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_target_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="start"
            android:maxLines="1"
            android:text="生成文稿"
            android:textColor="@color/textDark"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/audit_opinion"
            android:textColor="@color/textDark"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ev_audit_opinion"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="5"
            android:background="@drawable/shape_button_blue"
            android:gravity="top"
            android:textColor="@color/colorText"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_auditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/auditor"
            android:textColor="@color/textDark"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_auditor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="@color/textDark"
            android:textSize="17sp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="打回"
            android:textColor="@color/textDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingRight="15dp"
            android:text="通过"
            android:textColor="@color/colorDYBlue"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>